--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "@emailjs/browser": "^3.6.2",
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
+    "animate.css": "^4.1.1",
     "bootstrap": "^5.2.0",
     "framer-motion": "^6.5.1",
     "react": "^18.2.0",
+    "react-animation-on-scroll": "^5.1.0",
     "react-bootstrap": "^2.4.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
